--- a/css/custom.css
+++ b/css/custom.css
@@ -40,15 +40,21 @@ section.contact-section h1 {
 	border-bottom: 3px solid transparent;
 }
 
+/*Changing the active style for nav bar when scrolling*/
+
+.navbar-default .navbar-nav .active a,
+.navbar-default .navbar-nav .active a:focus,
+.navbar-default .navbar-nav .active a:hover {
+	color: #FEDC52 !important; 
+	background-color: #2C3E50 !important;
+	font-size: 1.5em !important;
+}
+
 /* Link Visit Hover Active */
 
 .navbar-default .navbar-nav li a:hover {
 	color: white;
 	border-bottom: 3px solid white;
-}
-
-.navbar-header .navbar-brand:hover {
-	color: white;	
 }
 
 /* /////// 2 Intro \\\\\\\\\ */
@@ -126,9 +132,18 @@ section div.container textarea.form-control {
 	box-shadow: none;
 }
 
+.form-control:-ms-input-placeholder, /* Internet Explorer 10-11 */
+.form-control::-moz-placeholder, /* Mozilla Firefox 19+ */
+.form-control:-moz-placeholder, /* Mozilla Firefox 4 to 18 */
+.form-control::-webkit-input-placeholder { /* WebKit, Blink, Edge */
+    color: black;
+    opacity: 1;
+}
+
 .contact-section p,
 .contact-section a {
 	font-size: 1.5em;
+	text-decoration: none;
 }
 
 /* /////// 6 Footer \\\\\\\\\ */
@@ -140,6 +155,8 @@ footer {
 }
 
 /********Temporary**********/
+
+
 
 @media(max-width:767px){}
 @media(min-width:768px){}
